--- a/social-links-profile-main/index.html
+++ b/social-links-profile-main/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="styles.css">
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
   
-  <title>Frontend Mentor | Social links profile</title>
+  <title>Social links profile</title>
 
   
 </head>
@@ -32,7 +32,6 @@
     </ul>
   </div>
 
-  
   
 </body>
 </html>
